vendor/臻识 C5-SDK 开发包/设备SDK开发包2.0.6.98/SDK/一体机SDK/linux/demo_centos/include/VzLPRClientSDK.h




/**
*  @brief 发送软件触发信号，强制处理当前时刻的数据并输出结果
*  @param  [IN] handle 由VzLPRClient_Open函数获得的句柄
*  @return 0表示成功，-1表示失败
*  @note   车牌识别结果通过回调函数的方式返回，如果当前视频画面中无车牌，输出识别结果为"_无_"
*  @ingroup group_device
*/
VZ_LPRC_API int __STDCALL VzLPRClient_ForceTrigger(VzLPRClientHandle handle);