vendor/臻识 C5-SDK 开发包/设备SDK开发包2.0.6.98/SDK/一体机SDK/DemoSource/Delphi/VzDelphiSDKDemo/inc/VzLPRClientSDKDefine.h



/**设备句柄，由VzLPRClient_Open获得，设备操作相关的函数都需要*/
typedef int VzLPRClientHandle;


/**设置回调函数时需要指定的类型*/
typedef enum
{
	VZ_LPRC_CALLBACK_COMMON_NOTIFY,	/**<SDK通用信息反馈（预留）*/
	VZ_LPRC_CALLBACK_PLATE_STR,		/**<车牌号码字符（预留）*/
	VZ_LRPC_CALLBACK_FULL_IMAGE,	/**<完整图像*/
	VZ_LPRC_CALLBACK_CLIP_IMAGE,	/**<截取图像*/
	VZ_LPRC_CALLBACK_PLATE_RESULT,	/**<实时识别结果*/
	VZ_LPRC_CALLBACK_PLATE_RESULT_STABLE,	/**<稳定识别结果*/
	VZ_LPRC_CALLBACK_PLATE_RESULT_TRIGGER,	/**<触发的识别结果，包括API（软件）和IO（硬件）方式的*/
	VZ_LPRC_CALLBACK_VIDEO,			/**<视频帧回调*/
}
VZ_LPRC_CALLBACK_TYPE;


/**通用信息反馈类型*/
typedef enum
{
	VZ_LPRC_NO_ERR = 0,		/**<无错误*/
	VZ_LPRC_ACCESS_DENIED,	/**<用户名密码错误*/
	VZ_LPRC_NETWORK_ERR,	/**<网络连接故障*/
    VZ_LPRC_ONLINE,         /**<设备上线*/
    VZ_LPRC_OFFLINE,        /**<设备掉线*/
	VZ_LPRC_IO_INPUT = 100, /**<IO口输入信号*/
}
VZ_LPRC_COMMON_NOTIFY;


/**识别结果的类型*/
typedef enum
{
	VZ_LPRC_RESULT_REALTIME,		/**<实时识别结果*/
	VZ_LPRC_RESULT_STABLE,			/**<稳定识别结果*/
	VZ_LPRC_RESULT_FORCE_TRIGGER,	/**<调用“VzLPRClient_ForceTrigger”触发的识别结果*/
	VZ_LPRC_RESULT_IO_TRIGGER,		/**<外部IO信号触发的识别结果*/
	VZ_LPRC_RESULT_VLOOP_TRIGGER,	/**<虚拟线圈触发的识别结果*/
	VZ_LPRC_RESULT_MULTI_TRIGGER,	/**<由_FORCE_\_IO_\_VLOOP_中的一种或多种同时触发，具体需要根据每个识别结果的TH_PlateResult::uBitsTrigType来判断*/
	VZ_LPRC_RESULT_TYPE_NUM			/**<结果种类个数*/
}
VZ_LPRC_RESULT_TYPE;


/**顶点定义
  *X_1000和Y_1000的取值范围为[0, 1000]；
  *即位置信息为实际图像位置在整体图像位置的相对尺寸；
  *例如X_1000 = x*1000/win_width，其中x为点在图像中的水平像素位置，win_width为图像宽度
*/
typedef struct
{
	unsigned X_1000;	/**<水平方向相对坐标*/
	unsigned Y_1000;	/**<竖直方向相对坐标*/
}
VZ_LPRC_VERTEX;

/**虚拟线圈名称*/
#define VZ_LPRC_VIRTUAL_LOOP_NAME_LEN	32

/**虚拟线圈顶点个数*/
#define VZ_LPRC_VIRTUAL_LOOP_VERTEX_NUM	4

/**预设省份信息*/
typedef struct
{
	char strProvinces[VZ_LPRC_PROVINCE_STR_LEN];	/**<所有支持的省份简称构成的字符串*/
	int nCurrIndex;	/**<当前的预设省份的序号，在strProvinces中的，-1为未设置*/
}
VZ_LPRC_PROVINCE_INFO;


/**图像信息*/
typedef struct
{
	unsigned		uWidth;			/**<宽度*/
	unsigned		uHeight;		/**<高度*/
	unsigned		uPitch;			/**<图像宽度的一行像素所占内存字节数*/
	unsigned		uPixFmt;		/**<图像像素格式，参考枚举定义图像格式（ImageFormatXXX）*/
	unsigned char	*pBuffer;	/**<图像内存的首地址*/
}
VZ_LPRC_IMAGE_INFO;

/**设备唯一序列号*/
typedef struct
{
	unsigned uHi;	/**<高位*/
	unsigned uLo;	/**<低位*/
}
VZ_DEV_SERIAL_NUM;


/**设备日期时间参数*/
typedef struct
{
	unsigned uYear;		/**<年*/
	unsigned uMonth;	/**<月 [1, 12]*/
	unsigned uMDay;		/**<月中的天数 [1, 31]*/
	unsigned uHour;		/**<时*/
	unsigned uMin;		/**<分*/
	unsigned uSec;		/**<秒*/
}
VZ_DATE_TIME_INFO;


/**串口参数*/
typedef struct
{
	unsigned uBaudRate;		// <波特率 300,600,1200,2400,4800,9600,19200,34800,57600,115200
	unsigned uParity;		// <校验位 其值为0-2=no,odd,even
	unsigned uDataBits;		// <数据位 其值为7,8 位数据位
	unsigned uStopBit;		// <停止位 其值为1,2位停止位
}
VZ_SERIAL_PARAMETER;


//智能视频
typedef struct _VZ_LPRC_DRAWMODE{
	BYTE byDspAddTarget;		//dsp叠加报警目标
	BYTE byDspAddRule;			//dsp叠加设置规则
	BYTE byDspAddTrajectory;	//dsp叠加轨迹	
	BYTE dwRes[2];
}VZ_LPRC_DRAWMODE;


/**可配置的识别类型*/
#define VZ_LPRC_REC_BLUE	    (1<<(LT_BLUE))							/**<蓝牌车*/
#define VZ_LPRC_REC_YELLOW	    (1<<(LT_YELLOW)|1<<(LT_YELLOW2))		/**<黄牌车*/
#define VZ_LPRC_REC_BLACK	    (1<<(LT_BLACK))							/**<黑牌车*/
#define VZ_LPRC_REC_COACH	    (1<<(LT_COACH))							/**<教练车*/
#define VZ_LPRC_REC_POLICE	    (1<<(LT_POLICE))						/**<警车*/
#define VZ_LPRC_REC_AMPOL	    (1 << (LT_ARMPOL) | 1 << (LT_ARMPOL2))	/**<武警车*/
#define VZ_LPRC_REC_ARMY        (1<<(LT_ARMY)|1<<(LT_ARMY2))			/**<军车*/
#define VZ_LPRC_REC_GANGAO	    (1<<(LT_HONGKONG)|1<<(LT_MACAO))		/**<港澳进出大陆车*/
#define VZ_LPRC_REC_EMBASSY     (1<<(LT_EMBASSY))						/**<使馆车*/

//触发输入的类型
typedef enum
{
	nWhiteList = 0,	//通过
	nNotWhiteList,	//不通过
	nNoLicence,		//无车牌
	nBlackList,		//黑名单
	nExtIoctl1,		//开关量/电平输入 1
	nExtIoctl2,		//开关量/电平输入 2
	nExtIoctl3		//开关量/电平输入 3
}VZ_InputType;


//输出配置
typedef struct
{
	int switchout1;					//开关量输出 1
	int switchout2;					//开关量输出 2
	int switchout3;					//开关量输出 3
	int switchout4;					//开关量输出 4
	int levelout1;					//电平输出 1 
	int levelout2;					//电平输出 2
	int rs485out1;					//RS485-1
	int rs485out2;					//RS485-2
	VZ_InputType eInputType;		//触发输入的类型
}VZ_LPRC_OutputConfig;

//输出配置信息
typedef struct
{
	VZ_LPRC_OutputConfig oConfigInfo[MAX_OutputConfig_Len];	//多个输出配置输出的消息
}VZ_OutputConfigInfo;